--- a/index.html
+++ b/index.html
@@ -3,48 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trang Chủ - Rạp Chiếu Phim</title>
+    <title>Trang chủ</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header id="header">
+    <header id="header"> 
         <div class="container">
-            <h1 class="logo">Rạp Chiếu Phim</h1>
+            <h1 class="logo">Rạp chiếu phim</h1>
             <nav class="navbar">
                 <ul>
-                    <li><a href="#">Trang Chủ</a></li>
-                    <li><a href="about.html">Giới Thiệu</a></li>
-                    <li><a href="products.html">Sản Phẩm</a></li>
-                    <li><a href="cart.html">Giỏ Hàng</a></li>
-                    <li><a href="login.html">Đăng Nhập</a></li>
-                    <li><a href="register.html">Đăng Ký</a></li>
-                    <li><a href="contact.html">Liên Hệ</a></li>
+                    <li><a href="#">Trang chủ</a></li>
+                    <li><a href="about.html">Giới thiệu</a></li>
+                    <li><a href="products.html">Sảm phẩm</a></li>
+                    <li><a href="cart.html">Giỏ hàng</a></li>
+                    <li><a href="login.html">Đăng nhập</a></li>
+                    <li><a href="register.html">Đăng ký</a></li>
+                    <li><a href="contact.html">Liên hệ</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-
     <main id="main-content">
         <section class="hero">
             <div class="container">
-                <h2>Chào mừng đến với Rạp Chiếu Phim Nha hihi</h2>
-                <p>Khám phá những bộ phim mới nhất và đặt vé ngay hôm nay!</p>
+                <h2>Chào mừng bạn đến với website</h2>
+                <p>Khám phá những bộ phim mới nhất và đặt vé ngày hôm nay</p>
             </div>
         </section>
 
         <section class="featured-movies">
             <div class="container">
-                <h2>Phim Nổi Bật</h2>
+                <h2>Phim nổi bật</h2>
                 <div class="movie-list">
-                    <!-- Danh sách phim nổi bật -->
+
                 </div>
             </div>
+            
         </section>
     </main>
-
     <footer id="footer">
         <div class="container">
-            <p>&copy; 2023 Rạp Chiếu Phim. All rights reserved.</p>
+            <p>&copy; 2025 Rạp chiếu phim. All rights reserved</p>
         </div>
     </footer>
 </body>
