--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Trang chủ</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="script">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header id="header"> 
