--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang chủ</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="script">
-    <link rel="stylesheet" href="style.css">
-    hongbeoi
 </head>
+
 <body>
-    <header id="header"> 
+    <header id="header">
         <div class="container">
-            <h1 class="logo">Rạp chiếu phim</h1>
+            <h1 class="logo">CGA</h1>
             <nav class="navbar">
                 <ul>
                     <li><a href="#">Trang chủ</a></li>
@@ -25,11 +24,12 @@
                 </ul>
             </nav>
         </div>
+
     </header>
     <main id="main-content">
         <section class="hero">
             <div class="container">
-                <h2>Chào mừng bạn đến với website</h2>
+                <h2>Poster</h2>
                 <p>Khám phá những bộ phim mới nhất và đặt vé ngày hôm nay</p>
             </div>
         </section>
@@ -41,7 +41,7 @@
 
                 </div>
             </div>
-            
+
         </section>
     </main>
     <footer id="footer">
@@ -50,4 +50,5 @@
         </div>
     </footer>
 </body>
+
 </html>
