--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang chủ</title>
-    <link rel="stylesheet" href="./css/style.css">
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -29,9 +30,12 @@
     </header>
     <main id="main-content">
         <section class="hero">
-            <div class="container">
-                <h2>Poster</h2>
-                <p>Khám phá những bộ phim mới nhất và đặt vé ngày hôm nay</p>
+            <div class="container Horizontal-Scroll-Bar">
+               <img src="images\8651524_conan-movie-27_5.jpg" alt="" class="poster">
+               <img src="images\8651524_conan-movie-27_5.jpg" alt="" class="poster">
+               <img src="images\8651524_conan-movie-27_5.jpg" alt="" class="poster">
+               <img src="images\8651524_conan-movie-27_5.jpg" alt="" class="poster">
+               <img src="images\8651524_conan-movie-27_5.jpg" alt="" class="poster">
             </div>
         </section>
 
