--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang chủ</title>
-    
+    <link rel="shortcut icon" href="images/logo.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -35,7 +35,6 @@
                <img src="images/nhagiatienposter.jpg" alt="" class="poster">
                <img src="images\voduongdainaoposter.jpg" alt="" class="poster">
                <img src="images\venomposter.jpg" alt="" class="poster">
-               <img src="images\8651524_conan-movie-27_5.jpg" alt="" class="poster">
             </div>
         </section>
 
@@ -48,6 +47,13 @@
             </div>
 
         </section>
+        <aside class="ads-sidebar">
+           <div class="container">
+            <img src="images/mienphinuocbanh.png" alt="" width="50%" height="auto">
+            <img src="images/giamhoadon.png" alt="" width="50%" height="auto">
+           </div>
+
+        </aside>
     </main>
     <footer id="footer">
         <div class="container">
