--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <ul>
                     <li><a href="#">Trang chủ</a></li>
                     <li><a href="about.html">Giới thiệu</a></li>
-                    <li><a href="products.html">Sảm phẩm</a></li>
+                    <li><a href="products.html">Sản phẩm</a></li>
                     <li><a href="cart.html">Giỏ hàng</a></li>
                     <li><a href="login.html">Đăng nhập</a></li>
                     <li><a href="register.html">Đăng ký</a></li>
