--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
     </header>
     <main id="main-content">
+        <aside class="left-aside"> </aside>
         <section class="hero">
             <div class="container Horizontal-Scroll-Bar">
                <img src="images\conanmovie27poster.jpg" alt="" class="poster">
@@ -49,8 +50,8 @@
         </section>
         <aside class="ads-sidebar">
            <div class="container">
-            <img src="images/mienphinuocbanh.png" alt="" width="50%" height="auto">
-            <img src="images/giamhoadon.png" alt="" width="50%" height="auto">
+            <img src="images/mienphinuocbanh.png" alt="" class="ads-pic">
+            <img src="images/giamhoadon.png" alt=""  class="ads-pic">
            </div>
 
         </aside>
