--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body>
+<body id="trangchu">
     <header id="header">
         <div class="container">
             <h1 class="logo">CGA</h1>
