--- a/register.html
+++ b/register.html
@@ -49,7 +49,7 @@
                             <input class="form-control" type="password" placeholder="Mật khẩu" id="password">
                             <lable class="form-lable">Ngày sinh</lable>
                             <div class="input-group mb-3">
-                                <select class="form-select" id="day">
+                                <select class="form-select" id="day" title="day">
                                     <option selected>Ngày</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
@@ -83,7 +83,7 @@
                                     <option value="30">30</option>
                                     <option value="31">31</option>
                                 </select>
-                                <select class="form-select" id="month">
+                                <select class="form-select" id="month" title="month">
                                     <option selected>Tháng</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
@@ -99,7 +99,7 @@
                                     <option value="12">12</option>
                                 </select>
 
-                                <select class="form-select" id="year">
+                                <select class="form-select" id="year" title="year">
                                     <option selected>Năm</option>
                                     <option value="2025">2025</option>
                                     <option value="2024">2024</option>
