--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang chủ</title>
     <link rel="shortcut icon" href="images/logo.ico" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 </head>
 
 <body id="trangchu">
@@ -32,10 +34,10 @@
         <aside class="left-aside"> </aside>
         <section class="hero">
             <div class="container Horizontal-Scroll-Bar">
-               <img src="images\conanmovie27poster.jpg" alt="" class="poster">
-               <img src="images/nhagiatienposter.jpg" alt="" class="poster">
-               <img src="images\voduongdainaoposter.jpg" alt="" class="poster">
-               <img src="images\venomposter.jpg" alt="" class="poster">
+                <img src="images\conanmovie27poster.jpg" alt="" class="poster">
+                <img src="images/nhagiatienposter.jpg" alt="" class="poster">
+                <img src="images\voduongdainaoposter.jpg" alt="" class="poster">
+                <img src="images\venomposter.jpg" alt="" class="poster">
             </div>
         </section>
 
@@ -49,17 +51,48 @@
 
         </section>
         <aside class="ads-sidebar">
-           <div class="container">
-            <img src="images/mienphinuocbanh.png" alt="" class="ads-pic">
-            <img src="images/giamhoadon.png" alt=""  class="ads-pic">
-           </div>
+            <div class="container">
+                <img src="images/mienphinuocbanh.png" alt="" class="ads-pic">
+                <img src="images/giamhoadon.png" alt="" class="ads-pic">
+            </div>
 
         </aside>
     </main>
     <footer id="footer">
-        <div class="container">
-            <p>&copy; 2025 Rạp chiếu phim. All rights reserved</p>
+        <div class="container footer-nav">
+
+            <div>
+                <h3>CGA Việt Nam</h3>
+                <ul>
+                    <li><a href="#">Giới thiệu</a></li>
+                    <li><a href="#">Sản phẩm</a></li>
+                    <li><a href="#">Liên hệ</a></li>
+                    <li><a href="#">Chính sách</a></li>
+                    <li><a href="#">Quảng cáo</a></li>
+                    <li><a href="#">Câu hỏi thường gặp</a></li>
+                </ul>
+            </div>
+            <div>
+
+                <h3>Các mạng xã hội của chúng tôi</h3>
+                <div class="social-icon">
+                    <a href="#"><i class="fab fa-facebook-square fa-2x"></i></a>
+                    <a href="#"><i class="fab fa-twitter-square fa-2x"></i></a>
+                    <a href="#"><i class="fab fa-instagram-square fa-2x"></i></a>
+                    <a href="#"><i class="fab fa-youtube-square fa-2x"></i></a>
+                </div>
+
+            </div>
+            <div>
+                <h3>Chăm sóc khách hàng</h3>
+                <ul>
+                    <li>Hotline: 123-456-78</li>
+                    <li>Email hỗ trợ: hotro@cga.vn</li>
+                    <li>Trung tâm hỗ trợ trực tiếp: 123, Ninh Kiều, Cần Thơ</li>
+                </ul>
+            </div>
         </div>
+
     </footer>
 </body>
 
