--- a/register.html
+++ b/register.html
@@ -31,22 +31,22 @@
         </div>
     </header>
     <main id="main-content">
-        <div class="container bg-light" id="reg-form">
+        <div class="bg-light" id="reg-form">
             <div>
                 <p class="text-center" id="form-title">Tạo tài khoản mới</p>
             </div>
             <form>
                 <fieldset>
                     <label class="form-lable">Tên</label>
-                    <input class="form-control" type="textbox" placeholder="Tên" id="name">
+                    <input class="form-control" type="textbox" placeholder="Tên" id="name" required>
                     <label class="form-lable">Email</label>
-                    <input class="form-control" type="textbox" placeholder="Email" id="Email">
+                    <input class="form-control" type="textbox" placeholder="Email" id="Email" required>
                     <lable class="form-lable">Số điện thoại</lable>
-                    <input class="form-control" type="textbox" placeholder="Số điện thoại" id="phone">
+                    <input class="form-control" type="textbox" placeholder="Số điện thoại" id="phone" required>
                     <lable class="form-label">Mật khẩu</lable>
-                    <input class="form-control" type="password" placeholder="Mật khẩu" id="password">
+                    <input class="form-control" type="password" placeholder="Mật khẩu" id="password" required>
                     <lable class="form-lable">Ngày sinh</lable>
-                    <input class="form-control" type="date" id="Bday">
+                    <input class="form-control" type="date" id="Bday" required>
                     <div class="d-grid m-4">
                         <button type="submit" class="btn btn-dark">Đăng ký</button>
                     </div>
