--- a/register.html
+++ b/register.html
@@ -19,13 +19,13 @@
             <h1 class="logo">CGA</h1>
             <nav class="navbar">
                 <ul>
-                    <li><a href="index.html">Trang chủ</a></li>
-                    <li><a href="about.html">Giới thiệu</a></li>
-                    <li><a href="products.html">Sản phẩm</a></li>
-                    <li><a href="cart.html">Giỏ hàng</a></li>
-                    <li><a href="login.html">Đăng nhập</a></li>
-                    <li><a href="#">Đăng ký</a></li>
-                    <li><a href="contact.html">Liên hệ</a></li>
+                    <li><a href="index.html" id="nav">Trang chủ</a></li>
+                    <li><a href="about.html" id="nav">Giới thiệu</a></li>
+                    <li><a href="products.html" id="nav">Sản phẩm</a></li>
+                    <li><a href="cart.html" id="nav">Giỏ hàng</a></li>
+                    <li><a href="login.html" id="nav">Đăng nhập</a></li>
+                    <li><a href="#" id="nav">Đăng ký</a></li>
+                    <li><a href="contact.html" id="nav">Liên hệ</a></li>
                 </ul>
             </nav>
         </div>
@@ -40,13 +40,26 @@
                     <label class="form-lable">Tên</label>
                     <input class="form-control" type="textbox" placeholder="Tên" id="name" required>
                     <label class="form-lable">Email</label>
-                    <input class="form-control" type="textbox" placeholder="Email" id="Email" required>
+                    <input class="form-control" type="email" placeholder="Email" id="Email" required>
                     <lable class="form-lable">Số điện thoại</lable>
                     <input class="form-control" type="textbox" placeholder="Số điện thoại" id="phone" required>
-                    <lable class="form-label">Mật khẩu</lable>
-                    <input class="form-control" type="password" placeholder="Mật khẩu" id="password" required>
                     <lable class="form-lable">Ngày sinh</lable>
                     <input class="form-control" type="date" id="Bday" required>
+                    <label class="form-lable">Giới tính</label>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" id="gender" name="male" required>
+                        <label class="form-check-lable" for="male">Nam</label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" id="gender" name="male" required>
+                        <label class="form-check-lable" for="female">Nữ</label>
+                    </div>
+                    <lable class="form-label">Mật khẩu</lable>
+                    <input class="form-control" type="password" placeholder="Mật khẩu" id="password" required>
+                    <lable class="form-label">Nhập lại mật khẩu</lable>
+                    <input class="form-control" type="password" placeholder="Nhập lại mật khẩu" id="comfirm-password"
+                        required>
+
                     <div class="d-grid m-4">
                         <button type="submit" class="btn btn-dark">Đăng ký</button>
                     </div>
