--- a/products.html
+++ b/products.html
@@ -45,7 +45,7 @@
                 <section class="phim_Product">
                     <img src="/images/phim1.jpg" alt="" class="img_Product">
                     <div class="div_Content">
-                        <h1><b>Na Tra Ma Đồng Đáo Hải</b></h1>
+                        <div class="name_movie"><h1><b>Na Tra Ma Đồng Đáo Hải</b></h1></div>
                         <table>
                             <tr>
                                 <td><b>Thể Loại:</b> Hoạt Hình, Phiêu Lưu</td>
@@ -63,19 +63,16 @@
                 <section class="phim_Product">
                     <img src="/images/phim2.jpg" alt="" class="img_Product">
                     <div class="div_Content">
-                        <h1><b>Magical Fantasy World</b></h1>
+                        <div class="name_movie"><h1><b>Magical Fantasy World</b></h1></div>
                         <table>
                             <tr>
-                                <td><b>Thể Loại:</b></td>
-                                <td>Hoạt Hình, Phiêu Lưu</td>
+                                <td><b>Thể Loại:</b> Hoạt Hình, Phiêu Lưu</td>
                             </tr>
                             <tr>
-                                <td><b>Thể Loại</b></td>
-                                <td>121 phút 51 giây</td>
+                                <td><b>Thời Lượng:</b> 60 phút</td>
                             </tr>
                             <tr>
-                                <td><b>Khởi Chiếu:</b></td>
-                                <td>07-03-2025</td>
+                                <td><b>Khởi Chiếu:</b>07-03-2025</td>
                             </tr>
                         </table>
                     </div> 
@@ -84,19 +81,16 @@
                 <section class="phim_Product">
                     <img src="/images/phim3.jpg" alt="" class="img_Product">
                     <div class="div_Content">
-                        <h1><b>Na Tra Ma Đồng Đáo Hải</b></h1>
+                        <div class="name_movie"><h1><b>Đào, phở và piano</b></h1></div>
                         <table>
                             <tr>
-                                <td><b>Thể Loại:</b></td>
-                                <td>Hoạt Hình, Phiêu Lưu</td>
+                                <td><b>Thể Loại:</b> Tinh Thần Dân Tộc</td>
                             </tr>
                             <tr>
-                                <td><b>Thể Loại</b></td>
-                                <td>121 phút 51 giây</td>
+                                <td><b>Thời Lượng:</b> 60 phút</td>
                             </tr>
                             <tr>
-                                <td><b>Khởi Chiếu:</b></td>
-                                <td>07-03-2025</td>
+                                <td><b>Khởi Chiếu:</b>09-03-2025</td>
                             </tr>
                         </table>
                     </div> 
@@ -105,19 +99,16 @@
                 <section class="phim_Product">
                     <img src="/images/phim4.jpg" alt="" class="img_Product">
                     <div class="div_Content">
-                        <h1><b>Na Tra Ma Đồng Đáo Hải</b></h1>
-                        <table>
+                        <div class="name_movie"><h1><b>Nữ Tu <br>Bóng Tối</b></h1></div>
+                        <table> 
                             <tr>
-                                <td><b>Thể Loại:</b></td>
-                                <td>Hoạt Hình, Phiêu Lưu</td>
+                                <td><b>Thể Loại:</b> Huyền bí,kinh dị</td>
                             </tr>
                             <tr>
-                                <td><b>Thể Loại</b></td>
-                                <td>121 phút 51 giây</td>
+                                <td><b>Thời Lượng:</b> 60 phút</td>
                             </tr>
                             <tr>
-                                <td><b>Khởi Chiếu:</b></td>
-                                <td>07-03-2025</td>
+                                <td><b>Khởi Chiếu:</b>07-03-2025</td>
                             </tr>
                         </table>
                     </div> 
@@ -126,19 +117,16 @@
                 <section class="phim_Product">
                     <img src="/images/phim5.jpg" alt="" class="img_Product">
                     <div class="div_Content">
-                        <h1><b>Na Tra Ma Đồng Đáo Hải</b></h1>
+                        <div class="name_movie"><h1><b>Cá Sấu <br> Tử Thần</b></h1></div>
                         <table>
                             <tr>
-                                <td><b>Thể Loại:</b></td>
-                                <td>Hoạt Hình, Phiêu Lưu</td>
+                                <td><b>Thể Loại:</b> Hoạt Hình, Phiêu Lưu</td>
                             </tr>
                             <tr>
-                                <td><b>Thể Loại</b></td>
-                                <td>121 phút 51 giây</td>
+                                <td><b>Thời Lượng:</b> 60 phút</td>
                             </tr>
                             <tr>
-                                <td><b>Khởi Chiếu:</b></td>
-                                <td>07-03-2025</td>
+                                <td><b>Khởi Chiếu:</b>07-03-2025</td>
                             </tr>
                         </table>
                     </div> 
@@ -147,19 +135,16 @@
                 <section class="phim_Product">
                     <img src="/images/phim6.jpg" alt="" class="img_Product">
                     <div class="div_Content">
-                        <h1><b>Na Tra Ma Đồng Đáo Hải</b></h1>
+                        <div class="name_movie"><h1><b>Kẻ <br> Ăn Hồn</b></h1></div>
                         <table>
                             <tr>
-                                <td><b>Thể Loại:</b></td>
-                                <td>Hoạt Hình, Phiêu Lưu</td>
+                                <td><b>Thể Loại:</b> Hoạt Hình, Phiêu Lưu</td>
                             </tr>
                             <tr>
-                                <td><b>Thể Loại</b></td>
-                                <td>121 phút 51 giây</td>
+                                <td><b>Thời Lượng:</b> 60 phút</td>
                             </tr>
                             <tr>
-                                <td><b>Khởi Chiếu:</b></td>
-                                <td>07-03-2025</td>
+                                <td><b>Khởi Chiếu:</b>07-03-2025</td>
                             </tr>
                         </table>
                     </div> 
@@ -168,19 +153,16 @@
                 <section class="phim_Product">
                     <img src="/images/phim7.jpg" alt="" class="img_Product">
                     <div class="div_Content">
-                        <h1><b>Na Tra Ma Đồng Đáo Hải</b></h1>
+                        <div class="name_movie"><h1><b>Bố<br>Già</b></h1></div>
                         <table>
                             <tr>
-                                <td><b>Thể Loại:</b></td>
-                                <td>Hoạt Hình, Phiêu Lưu</td>
+                                <td><b>Thể Loại:</b> Hoạt Hình, Phiêu Lưu</td>
                             </tr>
                             <tr>
-                                <td><b>Thể Loại</b></td>
-                                <td>121 phút 51 giây</td>
+                                <td><b>Thời Lượng:</b> 60 phút</td>
                             </tr>
                             <tr>
-                                <td><b>Khởi Chiếu:</b></td>
-                                <td>07-03-2025</td>
+                                <td><b>Khởi Chiếu:</b>07-03-2025</td>
                             </tr>
                         </table>
                     </div> 
@@ -189,19 +171,16 @@
                 <section class="phim_Product">
                     <img src="/images/phim8.jpg" alt="" class="img_Product">
                     <div class="div_Content">
-                        <h1><b>Na Tra Ma Đồng Đáo Hải</b></h1>
+                        <div class="name_movie"><h1><b>Cuộc Đào Tẩu Trên Không</b></h1></div>
                         <table>
                             <tr>
-                                <td><b>Thể Loại:</b></td>
-                                <td>Hoạt Hình, Phiêu Lưu</td>
+                                <td><b>Thể Loại:</b> Hoạt Hình, Phiêu Lưu</td>
                             </tr>
                             <tr>
-                                <td><b>Thể Loại</b></td>
-                                <td>121 phút 51 giây</td>
+                                <td><b>Thời Lượng:</b> 60 phút</td>
                             </tr>
                             <tr>
-                                <td><b>Khởi Chiếu:</b></td>
-                                <td>07-03-2025</td>
+                                <td><b>Khởi Chiếu:</b>07-03-2025</td>
                             </tr>
                         </table>
                     </div> 
@@ -210,19 +189,16 @@
                 <section class="phim_Product"> 
                     <img src="/images/phim9.jpg" alt="" class="img_Product">
                     <div class="div_Content">
-                        <h1><b>Na Tra Ma Đồng Đáo Hải</b></h1>
+                        <div class="name_movie"><h1><b>Cửu Long Thành Trại</b></h1></div>
                         <table>
                             <tr>
-                                <td><b>Thể Loại:</b></td>
-                                <td>Hoạt Hình, Phiêu Lưu</td>
+                                <td><b>Thể Loại:</b> Hoạt Hình, Phiêu Lưu</td>
                             </tr>
                             <tr>
-                                <td><b>Thể Loại</b></td>
-                                <td>121 phút 51 giây</td>
+                                <td><b>Thời Lượng:</b> 60 phút</td>
                             </tr>
                             <tr>
-                                <td><b>Khởi Chiếu:</b></td>
-                                <td>07-03-2025</td>
+                                <td><b>Khởi Chiếu:</b>07-03-2025</td>
                             </tr>
                         </table>
                     </div> 
@@ -231,19 +207,16 @@
                 <section class="phim_Product">
                     <img src="/images/phim10.jpg" alt="" class="img_Product">
                     <div class="div_Content">
-                        <h1><b>Na Tra Ma Đồng Đáo Hải</b></h1>
+                        <div class="name_movie"><h1><b>Quỷ <br> Nhập Tràng </b></h1></div>
                         <table>
                             <tr>
-                                <td><b>Thể Loại:</b></td>
-                                <td>Hoạt Hình, Phiêu Lưu</td>
+                                <td><b>Thể Loại:</b> Hoạt Hình, Phiêu Lưu</td>
                             </tr>
                             <tr>
-                                <td><b>Thể Loại</b></td>
-                                <td>121 phút 51 giây</td>
+                                <td><b>Thời Lượng:</b> 60 phút</td>
                             </tr>
                             <tr>
-                                <td><b>Khởi Chiếu:</b></td>
-                                <td>07-03-2025</td>
+                                <td><b>Khởi Chiếu:</b>07-03-2025</td>
                             </tr>
                         </table>
                     </div> 
@@ -252,19 +225,16 @@
                 <section class="phim_Product">
                     <img src="/images/phim11.jpg" alt="" class="img_Product">
                     <div class="div_Content">
-                        <h1><b>Na Tra Ma Đồng Đáo Hải</b></h1>
+                        <div class="name_movie"><h1><b>Nàng <br> Bạch Tuyết</b></h1></div>
                         <table>
                             <tr>
-                                <td><b>Thể Loại:</b></td>
-                                <td>Hoạt Hình, Phiêu Lưu</td>
+                                <td><b>Thể Loại:</b> Hoạt Hình, Phiêu Lưu</td>
                             </tr>
                             <tr>
-                                <td><b>Thể Loại</b></td>
-                                <td>121 phút 51 giây</td>
+                                <td><b>Thời Lượng:</b> 60 phút</td>
                             </tr>
                             <tr>
-                                <td><b>Khởi Chiếu:</b></td>
-                                <td>07-03-2025</td>
+                                <td><b>Khởi Chiếu:</b>07-03-2025</td>
                             </tr>
                         </table>
                     </div> 
@@ -273,19 +243,16 @@
                 <section class="phim_Product">
                     <img src="/images/phim12.jpg" alt="" class="img_Product">
                     <div class="div_Content">
-                        <h1><b>Na Tra Ma Đồng Đáo Hải</b></h1>
+                        <div class="name_movie"><h1><b>Venom <br> The Last Dance</b></h1></div>
                         <table>
                             <tr>
-                                <td><b>Thể Loại:</b></td>
-                                <td>Hoạt Hình, Phiêu Lưu</td>
+                                <td><b>Thể Loại:</b> Hoạt Hình, Phiêu Lưu</td>
                             </tr>
                             <tr>
-                                <td><b>Thể Loại</b></td>
-                                <td>121 phút 51 giây</td>
+                                <td><b>Thời Lượng:</b> 60 phút</td>
                             </tr>
                             <tr>
-                                <td><b>Khởi Chiếu:</b></td>
-                                <td>07-03-2025</td>
+                                <td><b>Khởi Chiếu:</b>07-03-2025</td>
                             </tr>
                         </table>
                     </div> 
@@ -294,19 +261,16 @@
                 <section class="phim_Product">
                     <img src="/images/phim13.jpg" alt="" class="img_Product">
                     <div class="div_Content">
-                        <h1><b>Na Tra Ma Đồng Đáo Hải</b></h1>
+                        <div class="name_movie"><h1><b>Một Bộ Phim MineCraft</b></h1></div>
                         <table>
                             <tr>
-                                <td><b>Thể Loại:</b></td>
-                                <td>Hoạt Hình, Phiêu Lưu</td>
+                                <td><b>Thể Loại:</b> Hoạt Hình, Phiêu Lưu</td>
                             </tr>
                             <tr>
-                                <td><b>Thể Loại</b></td>
-                                <td>121 phút 51 giây</td>
+                                <td><b>Thời Lượng:</b> 60 phút</td>
                             </tr>
                             <tr>
-                                <td><b>Khởi Chiếu:</b></td>
-                                <td>07-03-2025</td>
+                                <td><b>Khởi Chiếu:</b>07-03-2025</td>
                             </tr>
                         </table>
                     </div> 
@@ -315,19 +279,16 @@
                 <section class="phim_Product">
                     <img src="/images/phim14.jpg" alt="" class="img_Product">
                     <div class="div_Content">
-                        <h1><b>Na Tra Ma Đồng Đáo Hải</b></h1>
+                        <div class="name_movie"><h1><b>Phim <br> Xì Trum</b></h1></div>
                         <table>
                             <tr>
-                                <td><b>Thể Loại:</b></td>
-                                <td>Hoạt Hình, Phiêu Lưu</td>
+                                <td><b>Thể Loại:</b> Hoạt Hình, Phiêu Lưu</td>
                             </tr>
                             <tr>
-                                <td><b>Thể Loại</b></td>
-                                <td>121 phút 51 giây</td>
+                                <td><b>Thời Lượng:</b> 60 phút</td>
                             </tr>
                             <tr>
-                                <td><b>Khởi Chiếu:</b></td>
-                                <td>07-03-2025</td>
+                                <td><b>Khởi Chiếu:</b>07-03-2025</td>
                             </tr>
                         </table>
                     </div> 
@@ -336,19 +297,16 @@
                 <section class="phim_Product">
                     <img src="/images/phim15.jpg" alt="" class="img_Product">
                     <div class="div_Content">
-                        <h1><b>Na Tra Ma Đồng Đáo Hải</b></h1>
+                        <div class="name_movie"><h1><b>Bí Kiếp Luyện Rồng</b></h1></div>
                         <table>
                             <tr>
-                                <td><b>Thể Loại:</b></td>
-                                <td>Hoạt Hình, Phiêu Lưu</td>
+                                <td><b>Thể Loại:</b> Hoạt Hình, Phiêu Lưu</td>
                             </tr>
                             <tr>
-                                <td><b>Thể Loại</b></td>
-                                <td>121 phút 51 giây</td>
+                                <td><b>Thời Lượng:</b> 60 phút</td>
                             </tr>
                             <tr>
-                                <td><b>Khởi Chiếu:</b></td>
-                                <td>07-03-2025</td>
+                                <td><b>Khởi Chiếu:</b>07-03-2025</td>
                             </tr>
                         </table>
                     </div> 
