--- a/products.html
+++ b/products.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <script src="/js/scripts.js"></script>
 </head>
 <body>
     <!DOCTYPE html>
@@ -61,7 +62,7 @@
                     </div>
                     <br><br>
                     <div class="div_Icon">
-                        <i class="fa-solid fa-heart Heart"></i>
+                        <i class="fa-solid fa-heart Heart" onclick="changeHeartColor(0)"></i>
                         <i class="fa-solid fa-cart-shopping Cart"></i>
                     </div>
                 </section>  
@@ -84,7 +85,7 @@
                     </div>
                     <br><br>
                     <div class="div_Icon">
-                        <i class="fa-solid fa-heart Heart"></i>
+                        <i class="fa-solid fa-heart Heart" onclick="changeHeartColor(1)"></i>
                         <i class="fa-solid fa-cart-shopping Cart"></i>
                     </div>
                 </section> 
@@ -107,7 +108,7 @@
                     </div>
                     <br><br>
                     <div class="div_Icon">
-                        <i class="fa-solid fa-heart Heart"></i>
+                        <i class="fa-solid fa-heart Heart" onclick="changeHeartColor(2)"></i>
                         <i class="fa-solid fa-cart-shopping Cart"></i>
                     </div>
                 </section> 
@@ -130,7 +131,7 @@
                     </div>
                     <br><br>
                     <div class="div_Icon">
-                        <i class="fa-solid fa-heart Heart"></i>
+                        <i class="fa-solid fa-heart Heart" onclick="changeHeartColor(3)"></i>
                         <i class="fa-solid fa-cart-shopping Cart"></i>
                     </div>
                 </section> 
@@ -153,7 +154,7 @@
                     </div>
                     <br><br>
                     <div class="div_Icon">
-                        <i class="fa-solid fa-heart Heart"></i>
+                        <i class="fa-solid fa-heart Heart" onclick="changeHeartColor(4)"></i>
                         <i class="fa-solid fa-cart-shopping Cart"></i>
                     </div>
                 </section> 
@@ -176,7 +177,7 @@
                     </div>
                     <br><br>
                     <div class="div_Icon">
-                        <i class="fa-solid fa-heart Heart"></i>
+                        <i class="fa-solid fa-heart Heart" onclick="changeHeartColor(5)"></i>
                         <i class="fa-solid fa-cart-shopping Cart"></i>
                     </div> 
                 </section> 
@@ -199,7 +200,7 @@
                     </div>
                     <br><br>
                     <div class="div_Icon">
-                        <i class="fa-solid fa-heart Heart"></i>
+                        <i class="fa-solid fa-heart Heart" onclick="changeHeartColor(6)"></i>
                         <i class="fa-solid fa-cart-shopping Cart"></i>
                     </div> 
                 </section> 
@@ -222,7 +223,7 @@
                     </div>
                     <br><br>
                     <div class="div_Icon">
-                        <i class="fa-solid fa-heart Heart"></i>
+                        <i class="fa-solid fa-heart Heart" onclick="changeHeartColor(7)"></i>
                         <i class="fa-solid fa-cart-shopping Cart"></i>
                     </div> 
                 </section> 
@@ -245,7 +246,7 @@
                     </div>
                     <br><br>
                     <div class="div_Icon">
-                        <i class="fa-solid fa-heart Heart"></i>
+                        <i class="fa-solid fa-heart Heart" onclick="changeHeartColor(8)"></i>
                         <i class="fa-solid fa-cart-shopping Cart"></i>
                     </div> 
                 </section> 
@@ -268,7 +269,7 @@
                     </div>
                     <br><br>
                     <div class="div_Icon">
-                        <i class="fa-solid fa-heart Heart"></i>
+                        <i class="fa-solid fa-heart Heart" onclick="changeHeartColor(9)"></i>
                         <i class="fa-solid fa-cart-shopping Cart"></i>
                     </div> 
                 </section>
@@ -291,7 +292,7 @@
                     </div>
                     <br><br>
                     <div class="div_Icon">
-                        <i class="fa-solid fa-heart Heart"></i>
+                        <i class="fa-solid fa-heart Heart" onclick="changeHeartColor(10)"></i>
                         <i class="fa-solid fa-cart-shopping Cart"></i>
                     </div> 
                 </section>
@@ -314,7 +315,7 @@
                     </div>
                     <br><br>
                     <div class="div_Icon">
-                        <i class="fa-solid fa-heart Heart"></i>
+                        <i class="fa-solid fa-heart Heart" onclick="changeHeartColor(11)"></i>
                         <i class="fa-solid fa-cart-shopping Cart"></i>
                     </div> 
                 </section> 
@@ -337,7 +338,7 @@
                     </div>
                     <br><br>
                     <div class="div_Icon">
-                        <i class="fa-solid fa-heart Heart"></i>
+                        <i class="fa-solid fa-heart Heart" onclick="changeHeartColor(12)"></i>
                         <i class="fa-solid fa-cart-shopping Cart"></i>
                     </div>
                 </section>
@@ -360,7 +361,7 @@
                     </div>
                     <br><br>
                     <div class="div_Icon">
-                        <i class="fa-solid fa-heart Heart"></i>
+                        <i class="fa-solid fa-heart Heart" onclick="changeHeartColor(13)"></i>
                         <i class="fa-solid fa-cart-shopping Cart"></i>
                     </div>
                 </section> 
@@ -383,7 +384,7 @@
                     </div>
                     <br><br>
                     <div class="div_Icon">
-                        <i class="fa-solid fa-heart Heart"></i>
+                        <i class="fa-solid fa-heart Heart" onclick="changeHeartColor(14)"></i>
                         <i class="fa-solid fa-cart-shopping Cart"></i>
                     </div> 
                 </section>
