--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="container Horizontal-Scroll-Bar">
                 <img src="images\conanmovie27poster.jpg" alt="" class="poster">
                 <img src="images/nhagiatienposter.jpg" alt="" class="poster">
-                <img src="images\voduongdainaoposter.jpg" alt="" class="poster">
+                <img src="images\flowposter.jpg" alt="" class="poster">
                 <img src="images\venomposter.jpg" alt="" class="poster">
             </div>
         </section>
