--- a/products.html
+++ b/products.html
@@ -29,7 +29,7 @@
                 <h1 class="logo">CGA</h1>
                 <nav class="navbar">
                     <ul>
-                        <li><a href="#">Trang chủ</a></li>
+                        <li><a href="index.html">Trang chủ</a></li>
                         <li><a href="about.html">Giới thiệu</a></li>
                         <li><a href="products.html">Sản phẩm</a></li>
                         <li><a href="cart.html">Giỏ hàng</a></li>
