--- a/products.html
+++ b/products.html
@@ -424,6 +424,8 @@
                 
 
         </main>
+        <aside id="aside">
+        </aside>
         <br><br><br><br>
         <footer id="footer">
             <div class="container footer-nav">
