--- a/about.html
+++ b/about.html
@@ -26,11 +26,38 @@
                 </ul>
             </nav>
         </div>
-
     </header>
-    <main>
-
-        
+    <main id="gioithieu">
+        <div class="box">
+        <video id="video_gioithieu" controls muted loop>
+            <source src="images/video_gioithieu.mp4" type="video/mp4">
+        </video>
+        </div>
+        <div class="text_gioithieu">
+            <p>Chào mừng quý khách đến với CGA, điểm đến lý tưởng cho những trải nghiệm điện ảnh đỉnh cao. Với sứ mệnh mang đến cho khán giả những giây phút giải trí trọn vẹn, chúng tôi không ngừng đổi mới và nâng cấp dịch vụ nhằm đáp ứng mọi nhu cầu của khách hàng.Với hơn 20 năm kinh nghiệm trong ngành giải trí, CGA tự hào là điểm đến lý tưởng cho những tín đồ điện ảnh, với:</p>
+            <p><b>Công Nghệ Hiện Đại – Trải Nghiệm Hình Ảnh Sống Động</b></p>
+            <p>CGA tự hào sở hữu hệ thống phòng chiếu đạt tiêu chuẩn quốc tế, được trang bị:</p>
+            <ul>
+                <li>Màn hình lớn, sắc nét với công nghệ 4K, IMAX, 4DX, đem đến hình ảnh chân thực, sống động.</li>
+                <li>Âm thanh vòm Dolby Atmos hiện đại, cho trải nghiệm âm thanh đa chiều, chân thực đến từng chi tiết</li>
+                <li>Ghế ngồi cao cấp, thiết kế thoải mái, phù hợp cho mọi đối tượng khách hàng.</li>
+            </ul>
+            <p><b>Dịch Vụ Đẳng Cấp – Tiện Ích Hoàn Hảo</b></p>
+            <p>CGA cam kết mang đến cho khách hàng những trải nghiệm điện ảnh hoàn hảo nhất, với:</p>
+            <ul>
+                <li>Chất lượng phim đỉnh cao, đa dạng thể loại, từ phim hành động, kinh dị, tình cảm đến phim hoạt hình, anime.</li>
+                <li>Chương trình khuyến mãi hấp dẫn, giảm giá, tặng quà cho khách hàng thân thiết.</li>
+                <li>Đội ngũ nhân viên chuyên nghiệp, nhiệt tình, sẵn sàng hỗ trợ khách hàng mọi lúc, mọi nơi.</li>
+            </ul>
+            <p>Một số hình ảnh về rạp phim của chúng tôi:</p>
+            <div class="container_gallery">
+            <img class="image1" src="images/pho1.jpg">
+            <img class="image2" src="images/pho2.jpg">
+            <img class="image3" src="images/pho3.jpg">
+            <img class="image4" src="images/pho4.jpg">
+            </div>
+            <p>Vì vậy còn chần chừ gì nữa hãy đến ngay CGA để tận hưởng những siêu phẩm điện ảnh trong không gian đẳng cấp, chất lượng tuyệt vời! Trải nghiệm hình ảnh sắc nét, âm thanh sống động cùng dịch vụ chuyên nghiệp chắc chắn sẽ mang đến cho bạn những giây phút giải trí trọn vẹn. Đặt vé ngay hôm nay để không bỏ lỡ những bộ phim hấp dẫn nhất! 🎬✨</p>
+        </div>
     </main>
     <footer id="footer">
         <div class="container footer-nav">
