--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="./css/style.css">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     </head>
 <body>
     <header id="header">
@@ -38,16 +39,16 @@
             <p><b>Công Nghệ Hiện Đại – Trải Nghiệm Hình Ảnh Sống Động</b></p>
             <p>CGA tự hào sở hữu hệ thống phòng chiếu đạt tiêu chuẩn quốc tế, được trang bị:</p>
             <ul>
-                <li>Màn hình lớn, sắc nét với công nghệ 4K, IMAX, 4DX, đem đến hình ảnh chân thực, sống động.</li>
-                <li>Âm thanh vòm Dolby Atmos hiện đại, cho trải nghiệm âm thanh đa chiều, chân thực đến từng chi tiết</li>
-                <li>Ghế ngồi cao cấp, thiết kế thoải mái, phù hợp cho mọi đối tượng khách hàng.</li>
+                <li><i class="fa-solid fa-star"></i> Màn hình lớn, sắc nét với công nghệ 4K, IMAX, 4DX, đem đến hình ảnh chân thực, sống động.</li>
+                <li><i class="fa-solid fa-star"></i> Âm thanh vòm Dolby Atmos hiện đại, cho trải nghiệm âm thanh đa chiều, chân thực đến từng chi tiết</li>
+                <li><i class="fa-solid fa-star"></i> Ghế ngồi cao cấp, thiết kế thoải mái, phù hợp cho mọi đối tượng khách hàng.</li>
             </ul>
             <p><b>Dịch Vụ Đẳng Cấp – Tiện Ích Hoàn Hảo</b></p>
             <p>CGA cam kết mang đến cho khách hàng những trải nghiệm điện ảnh hoàn hảo nhất, với:</p>
             <ul>
-                <li>Chất lượng phim đỉnh cao, đa dạng thể loại, từ phim hành động, kinh dị, tình cảm đến phim hoạt hình, anime.</li>
-                <li>Chương trình khuyến mãi hấp dẫn, giảm giá, tặng quà cho khách hàng thân thiết.</li>
-                <li>Đội ngũ nhân viên chuyên nghiệp, nhiệt tình, sẵn sàng hỗ trợ khách hàng mọi lúc, mọi nơi.</li>
+                <li><i class="fa-solid fa-star"></i> Chất lượng phim đỉnh cao, đa dạng thể loại, từ phim hành động, kinh dị, tình cảm đến phim hoạt hình, anime.</li>
+                <li><i class="fa-solid fa-star"></i> Chương trình khuyến mãi hấp dẫn, giảm giá, tặng quà cho khách hàng thân thiết.</li>
+                <li><i class="fa-solid fa-star"></i> Đội ngũ nhân viên chuyên nghiệp, nhiệt tình, sẵn sàng hỗ trợ khách hàng mọi lúc, mọi nơi.</li>
             </ul>
             <p>Một số hình ảnh về rạp phim của chúng tôi:</p>
             <div class="container_gallery">
