--- a/register.html
+++ b/register.html
@@ -30,22 +30,23 @@
             </nav>
         </div>
     </header>
-    <main id="main-content">
-        <div class="bg-light" id="reg-form">
-            <div>
-                <p class="text-center" id="form-title">Tạo tài khoản mới</p>
-            </div>
-            <form>
-                <fieldset>
-                    <label for="name" class="form-lable">Tên</label>
-                    <input class="form-control" type="textbox" placeholder="Tên" id="name" required>
-                    <label for="email" class="form-lable">Email</label>
-                    <input class="form-control" type="email" placeholder="Email" id="email" required>
-                    <label for="phonenumber" class="form-lable">Số điện thoại</label>
-                    <input class="form-control" type="textbox" placeholder="Số điện thoại" id="phonenumber" required>
-                    <label for="birthday" class="form-lable">Ngày sinh</label>
-                    <input class="form-control" type="date" id="birthday" required>
-                    <label class="form-lable">Giới tính</label>
+    <main  class="form-center" id="main-content">
+        <div class="form-container">
+            <div class="form-box">
+                <h2>Tạo tài khoản mới</h2>
+                <form action="" method="post">
+                    <label for="urs-name" class="form-label">Họ và tên</label>
+                    <span class="input-icon"><img class="input-form-icon" src="images/user.png"></span>
+                    <input class="input-box form-control" type="textbox" placeholder="Họ và tên" id="name" name="name" title="Vui lòng nhập họ và tên">
+                    <label for="email" class="form-label">Email</label>
+                    <span class="input-icon"><img class="input-form-icon" src="images/email.png"></span>
+                    <input class="input-box form-control" type="email" placeholder="Email" id="email" name="email" title="Vui lòng nhập email">
+                    <label for="phone-number" class="form-label">Số điện thoại</label>
+                    <span class="input-icon"><img class="input-form-icon" src="images/phone.png"></span>
+                    <input class="input-box form-control" type="textbox" placeholder="Số điện thoại" id="phone-number" name="phoneNumber" title="Vui lòng nhập số điện thoại">
+                    <label for="birth-day" class="form-label">Ngày sinh</label>
+                    <input class="input-box form-control" type="date" id="birth-day" name="birthDay" title="Vui lòng nhập ngày sinh">
+                    <label class="form-label">Giới tính</label>
                     <div class="genderOp">
                         <div class="form-check">
                             <input class="form-check-input" type="radio"  name="gender" value="male" required>
@@ -56,21 +57,22 @@
                             <label class="form-check-lable" for="female">Nữ</label>
                         </div>
                     </div>
-                    <label class="form-label">Mật khẩu</label>
-                    <input class="form-control" type="password" placeholder="Mật khẩu" id="password" required>
-                    <label class="form-label">Nhập lại mật khẩu</label>
-                    <input class="form-control" type="password" placeholder="Nhập lại mật khẩu" id="comfirm-password"
-                        required>
-
-                    <div class="d-grid m-4">
-                        <button type="submit" class="btn btn-dark">Đăng ký</button>
-                    </div>
-                    <div>
-                        <p class="text-center">Đã có tài khoản?<a href="./login.html"> Đăng nhập</a></p>
-                    </div>
-                </fieldset>
-            </form>
+                    <label for="password" class="form-label">Mật khẩu</label>
+                    <span class="input-icon"><img class="input-form-icon" src="images/lock.png"></span>
+                    <input class="input-box form-control " type="password" placeholder="Mật khẩu" id="password" name="password" title="Vui lòng nhập mật khẩu">
+                    <label for="urs-name" class="form-label">Nhập lại mật khẩu</label>
+                    <span class="input-icon"><img class="input-form-icon" src="images/lock.png"></span>
+                    <input class="input-box form-control " type="textbox" placeholder="Nhập lại mật khẩu" id="confirm-password" name="confirmPassword" title="Vui lòng nhập lại mật khẩu">
+                </form>
+                <div class="d-grid m-4">
+                    <button type="submit" class="btn btn-dark">Đăng ký</button>
+                </div>
+                <div class="alr-have-acc">
+                    <p class="text-center">Đã có tài khoản? <a href="./login.html">Đăng nhập</a></p>
+                </div>
+            </div>
         </div>
+        
     </main>
     <footer id="footer">
         <div class="container footer-nav">
