--- a/register.html
+++ b/register.html
@@ -35,7 +35,7 @@
             <div class="form-box">
                 <h2>Tạo tài khoản mới</h2>
                 <form action="" method="post">
-                    <label for="urs-name" class="form-label">Họ và tên</label>
+                    <label for="name" class="form-label">Họ và tên</label>
                     <span class="input-icon"><img class="input-form-icon" src="images/user.png"></span>
                     <input class="input-box form-control" type="textbox" placeholder="Họ và tên" id="name" name="name" title="Vui lòng nhập họ và tên">
                     <label for="email" class="form-label">Email</label>
